--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>
+		Rahul Kannikulangara
+	</title>
+</head>
+<body>
+	<h1>Rahul </h1>
+</body>
+</html>
